@@ -52,7 +52,7 @@ RSpec::Matchers.define(:parse) do |input, opts|
 
   # NOTE: This has a nodoc tag since the rdoc parser puts this into 
   # Object, a thing I would never allow. 
-  chain :as do |expected_output, &block|
+  chain :as do |expected_output=nil, &block|
     as = expected_output
     block = block
   end
