@@ -2,7 +2,7 @@
 
 Gem::Specification.new do |s|
   s.name = 'parslet'
-  s.version = '1.7.0'
+  s.version = '1.7.1'
 
   s.authors = ['Kaspar Schiess']
   s.email = 'kaspar.schiess@absurd.li'
@@ -14,5 +14,5 @@ Gem::Specification.new do |s|
   s.require_paths = ['lib']
   s.summary = 'Parser construction library with great error reporting in Ruby.'  
   
-  s.add_dependency 'blankslate', '~> 2.0'
+  s.add_dependency 'blankslate', '>= 2.0', '<= 4.0'
 end
