@@ -49,7 +49,7 @@ describe Parslet do
         cause.to_s.should == "Expected at least 3 of [a] at line 1 char 1."
       end 
       it "should have a tree with 2 nodes" do
-        cause.children.should have(1).elements
+        cause.children.size.should == 1
       end 
     end
     it "should succeed on 'aaa'" do
@@ -117,7 +117,7 @@ describe Parslet do
         cause.to_s.should == "Failed to match sequence ('foo' 'bar') at line 1 char 4."
       end
       it "should have 2 nodes in error tree" do
-        cause.should have(1).children
+        cause.children.size.should == 1
       end 
     end
     it "should parse 'foobar'" do
@@ -142,7 +142,7 @@ describe Parslet do
         cause.to_s.should == "Expected one of ['foo', 'bar'] at line 1 char 1."
       end   
       it "should have an error tree with 3 nodes" do
-        cause.should have(2).children
+        cause.children.size.should == 2
       end 
     end
     
