@@ -5,6 +5,10 @@ require 'spec_helper'
 describe Parslet::Position do
   slet(:position) { described_class.new('öäüö', 4) }
 
-  its(:charpos) { should == 2 }
-  its(:bytepos) { should == 4 } 
+  it 'should have a charpos of 2' do
+    position.charpos.should == 2
+  end
+  it 'should have a bytepos of 4' do
+    position.bytepos.should == 4
+  end
 end
