@@ -7,6 +7,15 @@ require 'parslet/export'
 
 RSpec.configure do |config|
   config.mock_with :flexmock
+
+  begin
+    # Here's to the worst idea ever, rspec. This is why we'll be leaving you soon.
+    config.expect_with :rspec do |c|
+      c.syntax = [:should, :expect]
+    end
+  rescue NoMethodError
+    # If the feature is missing, ignore it. 
+  end
   
   # Exclude other ruby versions by giving :ruby => 1.8 or :ruby => 1.9
   #
